<?xml version="1.0"?>
<package format="2">
  <name>xpcc_rosserial_demo</name>
  <version>0.0.0</version>
  <description>The xpcc_rosserial_demo package</description>

  <maintainer email="stronglytyp3d@gmail.com">Sascha Schade (strongly-typed)</maintainer>

  <license>3-clause BSD</license>

  <author email="stronglytyp3d@gmail.com">Sascha Schade (strongly-typed)</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
